# gnu_gama_expat_files = ../../gnu_gama/xml/encoding.cpp

# noinst_LIBRARIES = libtmp.a
# libtmp_a_SOURCES = a.cpp
# libtmp_a_LIBADD = ../../gnu_gama/xml/encoding.cpp

AM_CXXFLAGS = -I..
AM_CFLAGS = -I/home/cepek/GNU/gama

noinst_PROGRAMS = slovnikar
slovnikar_CPPFLAGS = -I"../.."
slovnikar_SOURCES = slovnikar.cpp tmp.c



