EXTRA_DIST = gama-local.xsd \
      gama-local-adjustment.xsd \
      gama-local-schema.sql \
      ellipsoids.xml \
      gama-local-adjustment.xsd \
      lang/ca/rmpoints.ca.lang \
      lang/ca/gkfparser.ca.lang \
      lang/ca/gamalib.ca.lang \
      lang/ca/review.ca.lang \
      lang/ca/pobs.ca.lang \
      lang/ca/network.ca.lang \
      lang/ca/gama-local.ca.lang \
      lang/cz/gama-local.cz.lang \
      lang/cz/rmpoints.cz.lang \
      lang/cz/gkfparser.cz.lang \
      lang/cz/gamalib.cz.lang \
      lang/cz/review.cz.lang \
      lang/cz/pobs.cz.lang \
      lang/cz/network.cz.lang \
      lang/du/gama-local.du.lang \
      lang/du/rmpoints.du.lang \
      lang/du/gkfparser.du.lang \
      lang/du/gamalib.du.lang \
      lang/du/review.du.lang \
      lang/du/pobs.du.lang \
      lang/du/network.du.lang \
      lang/en/pobs.lang \
      lang/en/review.lang \
      lang/en/gamalib.lang \
      lang/en/gama-local.lang \
      lang/en/rmpoints.lang \
      lang/en/network.lang \
      lang/en/gkfparser.lang \
      lang/fi/gama-local.fi.lang \
      lang/fi/rmpoints.fi.lang \
      lang/fi/gkfparser.fi.lang \
      lang/fi/gamalib.fi.lang \
      lang/fi/review.fi.lang \
      lang/fi/pobs.fi.lang \
      lang/fi/network.fi.lang \
      lang/fr/network.fr.lang \
      lang/fr/gama-local.fr.lang \
      lang/fr/rmpoints.fr.lang \
      lang/fr/gkfparser.fr.lang \
      lang/fr/gamalib.fr.lang \
      lang/fr/review.fr.lang \
      lang/fr/pobs.fr.lang \
      lang/hu/rmpoints.hu.lang \
      lang/hu/gkfparser.hu.lang \
      lang/hu/gamalib.hu.lang \
      lang/hu/review.hu.lang \
      lang/hu/pobs.hu.lang \
      lang/hu/network.hu.lang \
      lang/hu/gama-local.hu.lang \
      lang/ru/gama-local.ru.lang \
      lang/ru/rmpoints.ru.lang \
      lang/ru/gkfparser.ru.lang \
      lang/ru/gamalib.ru.lang \
      lang/ru/review.ru.lang \
      lang/ru/pobs.ru.lang \
      lang/ru/network.ru.lang \
      lang/ua/gama-local.ua.lang \
      lang/ua/rmpoints.ua.lang \
      lang/ua/gkfparser.ua.lang \
      lang/ua/gamalib.ua.lang \
      lang/ua/review.ua.lang \
      lang/ua/pobs.ua.lang \
      lang/ua/network.ua.lang \
      lang/zh/gamalib.zh.lang \
      lang/zh/gama-local.zh.lang \
      lang/zh/gkfparser.zh.lang \
      lang/zh/network.zh.lang \
      lang/zh/pobs.zh.lang \
      lang/zh/review.zh.lang \
      lang/zh/rmpoints.zh.lang
