EXTRA_DIST = gama-local.gkf         gama-local.xml         \
             tst-tetrahedron-2.gkf  tst-tetrahedron-2.xml  \
             zoltan-test_2d_dms.gkf zoltan-test_2d_dms.xml \
             zoltan-test_2d_gon.gkf zoltan-test_2d_gon.xml \
             zoltan-test_3d_dms.gkf zoltan-test_3d_dms.xml \
             zoltan-test_3d_gon.gkf zoltan-test_3d_gon.xml
