EXTRA_DIST = gama-local.gkf            gama-local.xml \
             tst-tetrahedron-2.gkf     tst-tetrahedron-2.xml \
             tst-tetrahedron-3-deg.gkf tst-tetrahedron-3-deg.xml \
             tst-tetrahedron-3-gon.gkf tst-tetrahedron-3-gon.xml \
             zoltan-test_2d_dms.gkf    zoltan-test_2d_dms.xml \
             zoltan-test_2d_gon.gkf    zoltan-test_2d_gon.xml \
             zoltan-test_3d_dms.gkf    zoltan-test_3d_dms.xml \
             zoltan-test_3d_gon.gkf    zoltan-test_3d_gon.xml \
             scale-cov-gon.gkf \
             scale-cov-dms.gkf \
             fixed-constrained.gkf \
             fixed-azimuth.gkf         fixed-azimuth.xml \
             azimuth-angle.gkf         azimuth-angle.xml \
             azimuth-azimuth.gkf       azimuth-azimuth.xml \
             azimuth-distance.gkf      azimuth-distance.xml \
             gama-local-nop.gkf \
             gama-local-par.gkf \
             gama-local-deprecated.gkf
